--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
     				<div class="controls">
 	    				<button id="edit">Edit</button>
 	    				<button id="delete">Delete</button>
+	    				<button id="close">Close</button>
     				</div>
     			</header>
     			<div class="editBox">
+    				<div class="error"></div>
     				<label for="noteTitle">Title: </label>
     				<input id="noteTitle" type="text">
     				<br>
