--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta name="author" content="Nuțiu Denis">
     	<meta name="description" content="A note viewer made in JavaScript">
     	<meta name="keywords" content="">
-    	<link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+    	<link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
     </head>
     <body>
     	<header class="text-center">
