Adding more functionality and breaking things

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     					<button id="add">Add</button>
     				</div>
     				<div class="controls">
-	    				<button id="edit">Edit</button>
-	    				<button id="delete">Delete</button>
+	    				<button id="edit">Edit</button> 
+	    				<!--  <button id="delete" dissabled>Delete</button> -->
 	    				<button id="close">Close</button>
     				</div>
     			</header>
